--- a/jeu.css
+++ b/jeu.css
@@ -7,6 +7,7 @@ body {
     margin: 0;
     height: 100svh;
     gap: 1.5rem;
+    position: relative;
 }
 
 .turn {
@@ -32,12 +33,32 @@ body {
     gap: 1.5rem;
 }
 
+.header {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 h1 {
     color: white;
     font-family: "Poppins", sans-serif ;
     font-size: 3rem;
-    align-self: center;
     margin-bottom: 0;
+    margin-top: 10px;
+}
+
+.return {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    padding: 0.25rem 1rem 0.25rem 1rem;
+    background-color: black;
+    border: 2px solid white;
+    color: white;
+    font-family: "Poppins", sans-serif ;
+    font-size: 1.5rem;
+    margin: 0;
 }
 
 h2, .score1, .score2 {
@@ -65,6 +86,7 @@ h2, .score1, .score2 {
 
 .buttonOne, .buttonTwo, .buttonThree, .buttonFour, .buttonFive, .buttonSix, .buttonSeven, .buttonEight, .buttonNine {
     padding: 0;
+    margin: 0;
 }
 
 .buttonOne {
@@ -159,4 +181,67 @@ h2, .score1, .score2 {
     margin: 0;
     font-size: 2rem;
     padding: 0.25rem 1.25rem 0.25rem 1.25rem;
+}
+
+.popupContainer {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+.shadow {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 80%;
+}
+
+.popup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    background-color: black;
+    border: 2px solid white;
+    width: 50%;
+    height: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 30;
+}
+
+.announceWinner, .winnerPlayer {
+    font-family: "Poppins", sans-serif ;
+    margin: 0;
+}
+
+.announceWinner {
+    color: white;
+    font-size: 2rem;
+}
+
+.winnerPlayer {
+    font-size: 4rem;
+}
+
+.buttonBarMenu {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    gap: 4rem;
+}
+
+.menuButton, .replay {
+    padding: 0.25rem 1rem 0.25rem 1rem;
+    background-color: black;
+    border: 2px solid white;
+    color: white;
+    font-family: "Poppins", sans-serif ;
+    font-size: 2rem;
+    margin: 0;
 }
